--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"author": "root",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"helmet": "^5.1.0",
 		"mongoose": "^6.4.2",
