--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "first-mern-app",
 	"main": "server.js",
 	"scripts": {
-		"dev": "nodemon server.js"
+		"start": "nodemon server.js"
 	},
 	"author": "root",
 	"license": "ISC",
